Fix issue with notice alignment on front page.
git-svn-id: http://svn.assembla.com/svn/make-it/timetrack@84 e0e46c49-be69-4f5a-ad62-21024a331aea

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -282,9 +282,6 @@ form.new_employee_session div.errorExplanation {
     margin-left: 20px;
 }
 form.new_employee_session div.notice {
-    width: 0;
-    padding-right: 200px;
-    margin-right: -200px;
     margin-top: 15px; /* align with inputs */
 }
 form.new_employee_session div.big-logo {
